--- a/package.json
+++ b/package.json
@@ -21,7 +21,11 @@
     "@angular/router": "~11.2.0",
     "@capacitor/android": "^2.4.7",
     "@capacitor/core": "2.4.7",
+    "@ionic-native/core": "^5.31.1",
+    "@ionic-native/qr-scanner": "^5.31.1",
     "@ionic/angular": "^5.5.2",
+    "cordova-plugin-qrscanner": "^3.0.1",
+    "jetifier": "^1.6.6",
     "rxjs": "~6.6.0",
     "tslib": "^2.0.0",
     "zone.js": "~0.10.2"
