--- a/capacitor.config.json
+++ b/capacitor.config.json
@@ -1,1 +1,19 @@
-{}
+{
+  "appId": "io.ionic.starter",
+  "appName": "photo-gallery",
+  "bundledWebRuntime": false,
+  "npmClient": "npm",
+  "webDir": "www",
+  "plugins": {
+    "SplashScreen": {
+      "launchShowDuration": 0
+    }
+  },
+  "cordova": {},
+  "server": {
+    "url": "http://192.168.1.10:8100",
+    "cleartext": true,
+    "originalUrl": "http://192.168.1.10:8100",
+    "originalCleartext": true
+  }
+}
