--- a/angular.json
+++ b/angular.json
@@ -70,7 +70,8 @@
           },
           "configurations": {
             "production": {
-              "browserTarget": "app:build:production"
+              "browserTarget": "app:build:production",
+              "proxyConfig": "./proxy.conf.json"
             },
             "ci": {
               "progress": false
