--- a/capacitor.config.json
+++ b/capacitor.config.json
@@ -9,11 +9,5 @@
       "launchShowDuration": 0
     }
   },
-  "cordova": {},
-  "server": {
-    "url": "http://192.168.1.10:8100",
-    "cleartext": true,
-    "originalUrl": "http://192.168.1.10:8100",
-    "originalCleartext": true
-  }
+  "cordova": {}
 }
