--- a/package.json
+++ b/package.json
@@ -28,9 +28,11 @@
     "@ionic-native/core": "^5.31.1",
     "@ionic-native/photo-viewer": "^5.31.1",
     "@ionic-native/qr-scanner": "^5.31.1",
+    "@ionic-native/sqlite": "^5.31.1",
     "@ionic/angular": "^5.5.2",
     "com-sarriaroman-photoviewer": "^1.2.5",
     "cordova-plugin-qrscanner": "^3.0.1",
+    "cordova-sqlite-storage": "^6.0.0",
     "rxjs": "~6.6.0",
     "tslib": "^2.0.0",
     "zone.js": "~0.10.2"
