--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "@ionic-native/photo-viewer": "^5.31.1",
     "@ionic-native/qr-scanner": "^5.31.1",
     "@ionic-native/sqlite": "^5.31.1",
+    "@ionic-native/sqlite-porter": "^5.31.1",
     "@ionic/angular": "^5.5.2",
     "com-sarriaroman-photoviewer": "^1.2.5",
     "cordova-plugin-qrscanner": "^3.0.1",
