--- a/capacitor.config.json
+++ b/capacitor.config.json
@@ -11,7 +11,9 @@
   },
   "cordova": {},
   "server": {
-    "url": "http://192.168.1.10:8100",
-    "cleartext": true
+    "url": "http://192.168.1.10:8101",
+    "cleartext": true,
+    "originalUrl": "http://192.168.1.10:8100",
+    "originalCleartext": true
   }
 }
