--- a/capacitor.config.json
+++ b/capacitor.config.json
@@ -10,10 +10,5 @@
     }
   },
   "cordova": {},
-  "server": {
-    "url": "http://192.168.1.10:8100",
-    "cleartext": true,
-    "originalUrl": "http://192.168.1.10:8100",
-    "originalCleartext": true
-  }
+  "server": {}
 }
