--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "com-sarriaroman-photoviewer": "^1.2.5",
     "cordova-plugin-qrscanner": "^3.0.1",
     "cordova-sqlite-storage": "^6.0.0",
+    "moment": "^2.29.1",
     "rxjs": "~6.6.0",
     "tslib": "^2.0.0",
     "uk.co.workingedge.cordova.plugin.sqliteporter": "^1.1.1",
